# bmstu_ppo

./: README.md
imgs/: components.drawio  db_elems.drawio  uml_bl.drawio  uml_repository.drawio
src/: CMakeLists.txt  config.json  main.cpp
src/business_logic/: CMakeLists.txt
src/business_logic/exception/: Exception.h
src/business_logic/logger/: Logger.cpp  Logger.h
src/business_logic/managers/: AccountManager.cpp  AccountManager.h  DataFileManager.cpp  DataFileManager.h  ImageManager.cpp  ImageManager.h  LabelingManager.cpp  LabelingManager.h  MarkManager.cpp  MarkManager.h
src/business_logic/objects/connection/: Connection.cpp  Connection.h
src/business_logic/objects/dot/: Dot.h
src/business_logic/objects/image/: Image.cpp  Image.h
src/business_logic/objects/mark/: Mark.cpp  Mark.h
src/business_logic/objects/marked_object/: MarkedObject.cpp  MarkedObject.h
src/business_logic/objects/user/: User.cpp  User.h
src/business_logic/repository_interface/: IImageRepository.h  IMarkRepository.h  IMarkedObjectRepository.h  IUserRepository.h
src/data_access/: CMakeLists.txt
src/data_access/mock_repository/: ImageRepository.cpp  ImageRepository.h  MarkRepository.cpp  MarkRepository.h  MarkedObjectRepository.cpp  MarkedObjectRepository.h  UserRepository.cpp  UserRepository.h
src/data_access/psql_repository/: PSQLImageRepository.cpp  PSQLImageRepository.h  PSQLMarkRepository.cpp  PSQLMarkRepository.h  PSQLMarkedObjectRepository.cpp  PSQLMarkedObjectRepository.h  PSQLUserRepository.cpp  PSQLUserRepository.h  Query.cpp  Query.h
src/data_access/psql_repository/sql_files/: create_tables.sql
src/data_files/: coords.txt  marked_objects.txt
src/log/: log.txt
src/tech_ui/: CMakeLists.txt
src/tech_ui/app/: App.cpp  App.h
src/tech_ui/config_reader/: ConfigReader.h  json.hpp
src/tech_ui/controller/: Controller.cpp  Controller.h
src/tech_ui/request/: Request.cpp  Request.h
src/tech_ui/state/: State.cpp  State.h
src/tests/: CMakeLists.txt  main_test.cpp
src/tests/business_logic_tests/: AccountManagerTest.h  ImageManagerTest.h  LabelingManagerTest.h  MarkManagerTest.h
src/tests/data_access_tests/: PSQLAccountManagerTest.h  PSQLImageManagerTest.h  PSQLLabelingManagerTest.h  PSQLMarkManagerTest.h  const.h
